--- a/boards/shields/SplitSteno/SplitSteno.dtsi
+++ b/boards/shields/SplitSteno/SplitSteno.dtsi
@@ -1,26 +1,26 @@
-#include <dt-bindings/zmk/matrix_transform.h> // Put this with the other includes at the top of your dtsi
-
-&default_transform { // Offset of 3 because the left side has 3 columns
-    col-offset = <5>;
-};
+#include <dt-bindings/zmk/matrix_transform.h>
 
 / {
+    /**** MATRIX TRANSFORM ****/
+
     default_transform: keymap_transform0 {
         compatible = "zmk,matrix-transform";
         columns = <10>;
         rows = <3>;
         map = <
-        //  LKey 1 |LKey 2 |LKey 3  RKey 1 |RKey 2      |RKey 3 
-            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)     RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9)
-        //  LKey 4 |LKey 5 |LKey 6  RKey 4 |RKey 5      |RKey 6
-            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)     RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9)
-        //                          RKey 7 |RKey 8      |RKey 9
-                                    RC(2,3) RC(2,4)     RC(2,5) RC(2,6)
+            // Row 0
+            RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)    RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9)
+            RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)    RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9)
+                                    RC(2,3) RC(2,4)    RC(2,5) RC(2,6)
         >;
     };
-};
 
-/ {
+    /**** TRANSFORM ADJUSTMENT ****/
+    &default_transform {
+        col-offset = <5>;
+    };
+
+    /**** KSCAN CONFIG ****/
     kscan0: kscan0 {
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
@@ -31,22 +31,17 @@
             , <&xiao_d 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&xiao_d 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
-
     };
-};
 
-/ {
-    physical_layout0: physical_layout_0 { // First physical layout, use different naming for other layouts
+    /**** PHYSICAL LAYOUT ****/
+    physical_layout0: physical_layout_0 {
         compatible = "zmk,physical-layout";
         display-name = "Default Layout";
-        kscan = <&kscan0>; // Label of the kscan node, optional if all layouts use the same
-        transform = <&default_transform>; // Label of the matrix transform for this layout
+        kscan = <&kscan0>;
+        transform = <&default_transform>;
     };
-};
 
-/ {
     chosen {
         zmk,physical-layout = &physical_layout0;
-        // Other chosen items
     };
 };
