--- a/boards/shields/SplitSteno/SplitSteno.dtsi
+++ b/boards/shields/SplitSteno/SplitSteno.dtsi
@@ -1,20 +1,17 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 
-/ {
+ / {
     /**** MATRIX TRANSFORM ****/
-
     default_transform: keymap_transform0 {
         compatible = "zmk,matrix-transform";
         columns = <10>;
         rows = <3>;
         map = <
-            // Row 0
             RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4)    RC(0,5) RC(0,6) RC(0,7) RC(0,8) RC(0,9)
             RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4)    RC(1,5) RC(1,6) RC(1,7) RC(1,8) RC(1,9)
                                     RC(2,3) RC(2,4)    RC(2,5) RC(2,6)
         >;
     };
-
 
     /**** KSCAN CONFIG ****/
     kscan0: kscan0 {
@@ -29,7 +26,6 @@
             ;
     };
 
-    /**** PHYSICAL LAYOUT ****/
     physical_layout0: physical_layout_0 {
         compatible = "zmk,physical-layout";
         display-name = "Default Layout";
@@ -37,12 +33,13 @@
         transform = <&default_transform>;
     };
 
-    vbatt {
-      compatible = "voltage-divider";
-      io-channels = <&adc 0>;
-      output-ohms = <2000000>;
-      full-ohms = <(2806000)>;
-   };
+    vbatt: vbatt {
+        compatible = "voltage-divider";
+        io-channels = <&adc 0>;
+        power-gpios = <>;
+        output-ohms = <2000000>;   // R3
+        full-ohms = <2806000>;     // R3 + R1
+    };
 
     chosen {
         zmk,physical-layout = &physical_layout0;
@@ -50,3 +47,17 @@
     };
 };
 
+/ {
+    /* ADC config for channel 0 (pin P0.31 / A1) */
+    adc: &adc {
+        status = "okay";
+
+        channel@0 {
+            reg = <0>;
+            zephyr,gain = "ADC_GAIN_1_6";
+            zephyr,reference = "ADC_REF_INTERNAL";
+            zephyr,acquisition-time = <ADC_ACQ_TIME(ADC_ACQ_TIME_MICROSECONDS, 80)>;
+            zephyr,input-positive = <31>;   // A1 pin on XIAO nRF52840
+        };
+    };
+};
